fix overflow layout on hero section

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -146,7 +146,6 @@ main {
   top: 50%;
   left: 72px;
   transform: translateY(-50%);
-  width: 100%;
 }
 
 .hero__image__container{
