--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -160,9 +160,14 @@
     transform: translateY(-8px) rotate(-45deg);
   }
 
+  .hero__background {
+    height: 100%;
+  }
+
   .hero__inner {
     padding: 10px;
-    margin: 16px 32px;
+    left: 16px;
+    right: 16px;
   }
 
   .hero__image__container{
